# auraconnectai

./: .access_token  .auth_response.json  .cspell.json  .dockerignore  .editorconfig  .flake8  .gitignore  .linkcheckerrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .refresh_token  .spectral.yml  .sqlfluff  404.html  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUDIT_TICKETS.md  AUR-444-CHANGES.md  AUR-446-CHANGES.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CUSTOMER_WEB_SETUP.md  DEPLOYMENT.md  DESIGN_SYSTEM_IMPROVEMENTS.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mobile  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_DEPLOYMENT_CICD.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  NAV_STRUCTURE.md  (+74 more)
backend/: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  API_MIGRATION_GUIDE.md  API_PHASE4_DOCUMENTATION.md  CORE_MODELS_IMPLEMENTATION.md  DATABASE_IMPROVEMENTS_RESPONSE.md  Dockerfile  ENUM_FIX_SUMMARY.md  EQUIPMENT_MODULE_MIGRATION.md  IMPLEMENTATION_NOTES.md  MERGE_BLOCKER_FIXES.md  MIGRATION_FIXES_SUMMARY.md  MIGRATION_ISSUES.md  MODULE_IMPLEMENTATION_SUMMARY.md  MODULE_STANDARDIZATION_TICKET.md  MODULE_STRUCTURE_STANDARDS.md  PHASE4_API_IMPLEMENTATION_SUMMARY.md  PHASE4_REFACTORING_SUMMARY.md  PRICING_RULES_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PR_CLARIFICATION.md  REFUND_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_IMPROVEMENTS.md  TABLE_LAYOUT_IMPLEMENTATION_SUMMARY.md  alembic.ini  analyze_heads.py  cleanup_migrations.py  conftest.py  fix-get-current-active-user.sh  fix-metadata-columns.sh  fix_all_migrations.py  fix_analytics_user_types.py  fix_await_permission.py  fix_exceptions.py  fix_migrations.py  fix_permission_dependencies.py  (+34 more)
backend/alembic/: env.py
backend/alembic/versions/: 004_add_menu_sync_tables.py  005_add_customer_system.py  006_add_rewards_engine.py  006a_reward_enums.py  006b_reward_templates.py  006c_customer_rewards.py  (+73 more)
backend/app/: app_factory.py  main.py  startup.py
backend/core/: api_documentation.py  audit_logger.py  auth.py  auth_context.py  auth_rate_limiter.py  background_tasks.py  cache.py  cache_compression.py  cache_config.py  cache_monitoring.py  cache_preloader.py  cache_service.py  cache_versioning.py  compliance.py  config.py  config_validation.py  database.py  database_utils.py  decorators.py  deps.py  distributed_session.py  email_config.py  email_service.py  enhanced_rbac.py  enhanced_redis_cache.py  error_handling.py  exceptions.py  file_service.py  inventory_models.py  inventory_schemas.py  inventory_service.py  memory_cache.py  menu_models.py  menu_schemas.py  menu_service.py  menu_sync_conflict_resolver.py  menu_sync_models.py  menu_sync_monitor.py  menu_sync_scheduler.py  menu_sync_schemas.py  (+33 more)
backend/docs/: API_CHANGES.md  API_RESPONSE_STANDARDS.md  CACHING_ENHANCEMENTS.md  CACHING_STRATEGY.md  QUERY_OPTIMIZATION_GUIDE.md  RATE_LIMITING.md  RBAC_DOCUMENTATION.md  SCHEDULING_CONFLICT_FIX.md  WEBSOCKET_AUTH.md  caching-guide.md
backend/examples/: websocket_client_example.py
backend/migrations/: add_analytics_indexes.sql  add_order_sync_tables.py
backend/modules/: __init__.py
backend/scripts/: check_app_import.py  create_merge_heads.py  docker-entrypoint.sh  generate_openapi_spec.py  run_tests.py  seed_email_templates.py  seed_test_data.py  seed_test_data_simple.py  sync_openapi_to_frontend.py  validate_openapi.py
backend/tests/: README.md  conftest_split_bill.py  run_auth_coverage.py  test_api_simple.py  test_app_startup_smoke.py  test_auth_brute_force.py  test_auth_comprehensive.py  test_auth_context_permissions.py  test_auth_endpoints.py  test_auth_jwt.py  test_auth_rbac_login.py  test_cache.py  test_cache_id_zero.py  test_clv_bug_fixes.py  test_customer_lifetime_value.py  test_dependency_isolation.py  test_enhanced_payroll_e2e.py  test_json_efficiency.py  test_menu_management.py  test_menu_versioning_service.py  test_menu_versioning_triggers.py  test_openapi_schema.py  test_password_security.py  test_payroll_api.py  test_payroll_engine.py  test_payroll_engine_mocked.py  test_payroll_engine_simple.py  test_payroll_router_mounting.py  test_performance.py  test_priority_algorithms.py  test_query_performance.py  test_queue_management.py  test_rate_limiter.py  test_rate_limiting.py  test_rbac_integration.py  test_rbac_system.py  test_redundant_filtering_fix.py  test_response_middleware_fix.py  test_response_standardization.py  test_routing_rules.py  (+10 more)
backend/workers/: data_retention_worker.py  notification_worker.py  payment_webhook_worker.py
(+1761 files in other folders)
